--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   docker-build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Code
@@ -22,8 +22,6 @@ jobs:
     - name: Build Docker Image
       run: docker build -t shaikbyte/github_action_docker:latest .
    
-    - name: Push Docker Image
-      run: docker push shaikbyte/github_action_docker:latest
-      
-    - name: Log out from Docker Hub  
-      run: docker logout
+    - name: List docker images
+      run: docker images
+
