--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,12 +15,9 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
-      
-    - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
    
     - name: Build Docker Image
-      run: docker build -t shaikbyte/github_action_docker:latest .
+      run: docker build -t santhunaidu_docker:latest .
    
     - name: List docker images
       run: docker images
