--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,4 +21,12 @@ jobs:
    
     - name: List docker images
       run: docker images
+    - name: login into docker hub
+      run: echo "${{secrets.docker_password}}" | docker login -u "${{ secrets.docker_username }}" --password-stdin
+
+    - name: Push Docker Image
+      run: docker push santhunaidu_docker_docker:latest
+
+    - name: Log out from Docker Hub  
+      run: docker logout
 
