--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,9 @@ jobs:
    
     - name: List docker images
       run: docker images
+
+    - name: Tag image
+      run: docker tag santhunaidu_docker:latest santhunaidu/santhunaidu_docker:latest
     
     - name: login into docker hub
       run: echo "${{secrets.docker_password}}" | docker login -u "${{ secrets.docker_username }}" --password-stdin
