--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
     - name: List docker images
       run: docker images
 
-    - name: Tag image
+    - name: Tag the image
       run: docker tag santhunaidu_docker:latest santhunaidu/santhunaidu_docker:latest
     
     - name: login into docker hub
